<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share_ur"/>
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_menu_rate"
        android:title="@string/menu_rate_ur" />
    <item
        android:id="@+id/nav_otherApp"
        android:icon="@drawable/ic_menu_app"
        android:title="@string/menu_othersApp_ur" />
    <item
        android:id="@+id/nav_aboutUs"
        android:icon="@drawable/ic_menu_aboutus"
        android:title="@string/menu_AboutUs_ur" />

    <item
        android:id="@+id/nav_contactUs"
        android:icon="@drawable/ic_menu_contactus"
        android:title="@string/menu_ContactUs_ur" />
    <item
        android:id="@+id/nav_programGuide"
        android:icon="@drawable/ic_menu_guide"
        android:title="@string/menu_ProgramGuide_ur" />
    <item
        android:id="@+id/nav_fontsAndColors"
        android:icon="@drawable/ic_menu_font"
        android:title="@string/menu_FontsAndColors_ur" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_setting"
        android:title="@string/action_settings_ur" />


</group>

</menu>