<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share_fa"/>
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_menu_rate"
        android:title="@string/menu_rate_fa" />
    <item
        android:id="@+id/nav_otherApp"
        android:icon="@drawable/ic_menu_app"
        android:title="@string/menu_othersApp_fa" />
    <item
        android:id="@+id/nav_aboutUs"
        android:icon="@drawable/ic_menu_aboutus"
        android:title="@string/menu_AboutUs_fa" />

    <item
        android:id="@+id/nav_contactUs"
        android:icon="@drawable/ic_menu_contactus"
        android:title="@string/menu_ContactUs_fa" />
    <item
        android:id="@+id/nav_programGuide"
        android:icon="@drawable/ic_menu_guide"
        />
    <item
        android:id="@+id/nav_fontsAndColors"
        android:icon="@drawable/ic_menu_font"
     />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_setting"
        android:title="@string/action_settings_fa" />


</group>

</menu>