<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#A112151B"
    android:id="@+id/rl_exit"
    android:padding="10dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/exit"
        android:orientation="vertical"
        android:gravity="center_horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="#ff0000"
                android:textSize="20sp"
                android:id="@+id/tv_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/exit_text"
                android:textColor="#fff"
                android:id="@+id/tv_caption"
                android:textSize="16sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:id="@+id/llmain"
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:id="@+id/li_btn_hemayat"
                    android:orientation="horizontal"
                    android:background="@drawable/exit_bg">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/ic_menu_share"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="#fff"
                        android:shadowColor="#000000"
                        android:shadowRadius="3"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:id="@+id/tv_exit"
                        android:textSize="16sp"/>
                    
                </LinearLayout>
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:id="@+id/li_btn_star"
                    android:orientation="horizontal"
                    android:background="@drawable/star_icon"
                    android:layout_marginLeft="29dp">
                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:background="@drawable/star_icon1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/star"
                        android:textColor="#fff"
                        android:shadowColor="#000000"
                        android:shadowRadius="3"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:id="@+id/tv_star"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_width="230dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/li_btn_exit"
            android:background="@drawable/hemayat_icon"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/exit_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#fff"
                android:shadowColor="#000000"
                android:shadowRadius="3"
                android:shadowDx="1"
                android:shadowDy="1"
                android:id="@+id/tv_hemayat"
                android:textSize="16sp"/>


        </LinearLayout>

        <TextView
            android:layout_width="230dp"
            android:layout_height="45dp"
            android:id="@+id/tvExit"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="#fff"
            android:shadowColor="#000000"
            android:shadowRadius="3"
            android:shadowDx="1"
            android:shadowDy="1"
            android:background="#00a0d5"
            />

    </LinearLayout>
</RelativeLayout>